syntax = "proto3";

package hexalog;

import "github.com/hexablock/hexaring/structs.proto";

service HexalogRPC {
    rpc ProposeRPC(RPCRequest) returns (RPCResponse) {}
    rpc CommitRPC(RPCRequest) returns (RPCResponse) {}
    rpc GetRPC(RPCRequest) returns (RPCResponse) {}
    rpc TransferKeylogRPC(stream RPCRequest) returns (stream RPCRequest) {}
    rpc FetchKeylogRPC(stream RPCRequest) returns (stream RPCRequest) {}
}

message Entry {
    bytes Previous = 1;
    uint64 Timestamp = 2;
    uint32 Height = 3;
    bytes Key = 4;
    bytes Data = 5;
}

message RPCRequest {
    bytes ID = 1;
    Entry Entry = 2;
    RequestOptions Options = 3;
}

message RequestOptions {
    // Index of the source in the PeerSet.  This is set internally by the log
    int32 SourceIndex = 1;
    // Set of peers for the request.
    repeated hexaring.Location PeerSet = 2;
}

message RPCResponse {
    Entry Entry = 1;
}
